# nyc-subway-rs

./: Cargo.toml  README.md  build.rs  gtfs.json
nyc_subway_rs_derive/: Cargo.toml
nyc_subway_rs_derive/src/: lib.rs
proto/gtfs/: gtfs-realtime-NYCT.proto
src/: entities.rs  feed.rs  gtfs.rs  lib.rs  main.rs  proto.rs  render.rs  transit.rs  util.rs
src/render/: shader.wgsl  state.rs  stop.rs
src/util/: geo.rs
