[package]
name = "nyc_subway_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nyc_subway_rs_derive = { path = "./nyc_subway_rs_derive" }
prost = "0.13.2"
reqwest = "0.12.7"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
xdg = "2.5.2"
anyhow = "1.0.89"
zip = "2.2.0"
csv = "1.3.0"
env_logger = "0.11.5"
log = "0.4.22"

[build-dependencies]
prost-build = "0.13.2"
